add sidebar hidden and generate thumbnail by default

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div class="container">
-        <div class="sidebar">
+        <button id="toggleSidebar" class="sidebar-toggle">☰</button>
+        <div id="sidebar">
             <button id="back-button">Back</button>
             <button id="root-button">Root</button>
             <button id="clear-image-button">Clear Image</button>
