favorite button and header, sqlite for remember favortie

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="header">
         <button id="toggleSidebar" class="sidebar-toggle">☰</button>
+        <span id="folder-name">Current Folder Name</span>
+        <button id="favorite-button" class="favorite">☆</button>
+    </div>
+    <div class="container">
         <div id="sidebar">
             <button id="back-button">Back</button>
             <button id="root-button">Root</button>
