add favorite folder list button

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <button id="toggleSidebar" class="sidebar-toggle">☰</button>
-        <span id="folder-name">Current Folder Name</span>
+        <span id="header-topic">Current Folder Name</span>
         <button id="favorite-button" class="favorite">☆</button>
     </div>
     <div class="container">
@@ -19,6 +19,7 @@
             <button id="back-button">Back</button>
             <button id="root-button">Root</button>
             <button id="clear-image-button">Clear Image</button>
+            <button id="show-favorite-button">Show Favorite</button>
             <hr>
             <ul id="folder-list">
                 <!-- Folder structure will be populated here -->
@@ -36,6 +37,7 @@
         </div>
     </div>
     <script src="scripts/app.js"></script>
+    <!-- <div id="debug-log" style="position: fixed; bottom: 10px; left: 10px; background: rgba(0,0,0,0.8); color: white; padding: 10px;"></div> -->
 </body>
 
 </html>
