moduleize and refactor frontend js

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
             <div id="sidebar">
                 <button id="back-button">Back</button>
                 <button id="root-button">Root</button>
-                <button id="clear-image-button">Clear Image</button>
                 <button id="show-favorite-button">Show Favorite</button>
+                <button id="test-function-button">Test</button>
                 <hr>
                 <ul id="folder-list">
                     <!-- Folder structure will be populated here -->
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <script src="scripts/app.js"></script>
+    <script type="module" src="scripts/app.js"></script>
     <!-- <div id="debug-log" style="position: fixed; bottom: 10px; left: 10px; background: rgba(0,0,0,0.8); color: white; padding: 10px;"></div> -->
 </body>
 
